Добавление данных в ENUM

--- a/modules/global/src/com/company/gazpromtest/entity/messages.properties
+++ b/modules/global/src/com/company/gazpromtest/entity/messages.properties
@@ -14,3 +14,9 @@ Weather.currentWeather=Current weather
 City=City
 City.SAMARA=Самара
 City.TOGLIATTI=Тольятти
+City.MOSCOW=Москва
+City.SAINTPETERSBURG=Санкт-Петербург
+City.CHELYABINSK=Челябинск
+City.KAZAN=Казань
+City.YEKATERINBURG=Екатеринбург
+City.NOVOSIBIRSK=Новосибирск
