--- a/modules/global/src/com/company/gazpromtest/entity/messages_en.properties
+++ b/modules/global/src/com/company/gazpromtest/entity/messages_en.properties
@@ -1,5 +1,11 @@
 City.SAMARA=Samara
 City.TOGLIATTI=Togliatti
+City.MOSCOW=Moscow
+City.SAINTPETERSBURG=Saint petersburg
+City.CHELYABINSK=Chelyabinsk
+City.KAZAN=Kazan
+City.YEKATERINBURG=Yekaterinburg
+City.NOVOSIBIRSK=Novosibirsk
 Weather.pressure=Pressure
 Weather.humidity=Humidity
 Weather.description=Description
