--- a/modules/global/src/com/company/gazpromtest/entity/messages_en.properties
+++ b/modules/global/src/com/company/gazpromtest/entity/messages_en.properties
@@ -6,6 +6,7 @@ City.CHELYABINSK=Chelyabinsk
 City.KAZAN=Kazan
 City.YEKATERINBURG=Yekaterinburg
 City.NOVOSIBIRSK=Novosibirsk
+City.QWEQWEQWEQWE=Qweqweqweqwe
 Weather.pressure=Pressure
 Weather.humidity=Humidity
 Weather.description=Description
