--- a/modules/web/src/com/company/gazpromtest/web/screens/weather/messages.properties
+++ b/modules/web/src/com/company/gazpromtest/web/screens/weather/messages.properties
@@ -3,3 +3,9 @@ cityField=Город
 dateFrom=С даты
 toDate=По дату
 currentWeather=Погода сейчас
+dataNotFound=К сожалению, данные для данного города отсутствуют, повторите попоытку позже
+error=Ошибка
+serviceNotResponding=Сервис не отвечает
+serviceOpenWeatherNotResponding=Сервис Open weather map не отвечает, показать устаревшие данные?
+formatDate = Неверно введена дата
+dateMayBeOnlyPositive = Разница между датами должна быть положительна
