--- a/modules/web/src/com/company/gazpromtest/web/screens/weather/messages_en.properties
+++ b/modules/web/src/com/company/gazpromtest/web/screens/weather/messages_en.properties
@@ -3,3 +3,5 @@ cityField=City
 dateFrom=Date from
 toDate=To date
 currentWeather=Current weather
+error=Error
+serviceOpenWeatherNotResponding=Service open weather not responding
